Fixed nav and tweets on mobile

--- a/src/css/seattletimes.less
+++ b/src/css/seattletimes.less
@@ -85,6 +85,10 @@ nav.main-nav {
     display: block;
     vertical-align: middle;
     padding: 8px;
+    
+    @media @mobile {
+      padding: 0;
+    }
 
     img {
       // width: 310px;
