--- a/src/css/social.less
+++ b/src/css/social.less
@@ -22,6 +22,6 @@
   }
 
   @media @mobile {
-    display: none;
+    display: none !important;
   }
 }
